bin/protobuf/ProtoParser.py
# Generated from java-escape by ANTLR 4.4
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .ProtoParserListener import ProtoParserListener
else:
    from ProtoParserListener import ProtoParserListener

class ProtoParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    BLOCK_OPEN=17
    MESSAGE_LITERAL=9
    SERVICE_LITERAL=14
    PROTOBUF_SCOPE_LITERAL=27
    EXTENSIONS_TO_LITERAL=12
    LINE_COMMENT=1
    PAREN_CLOSE=20
    ITEM_TERMINATOR=26
    OPTION_LITERAL=7
    EXTENSIONS_MAX_LITERAL=13
    WHITESPACE=3
    EQUALS=23
    BOOL_LITERAL=31
    EXTENSIONS_DEF_LITERAL=11
    FLOAT_LITERAL=32
    COLON=24
    QUALIFIED_IDENTIFIER=34
    MULTILINE_COMMENT=2
    STRING_LITERAL=30
    BLOCK_CLOSE=18
    FIELD_IDENTIFIER=35
    PACKAGE_LITERAL=5
    IMPORT_PUBLIC=4
    COMMA=25
    IDENTIFIER=33
    INTEGER_LITERAL=29
    EXTEND_LITERAL=10
    PROTOBUF_TYPE_LITERAL=28
    ENUM_LITERAL=8
    IMPORT_LITERAL=6
    PAREN_OPEN=19
    BRACKET_CLOSE=22
    RPC_LITERAL=16
    RETURNS_LITERAL=15
    BRACKET_OPEN=21
    PROTO=36
    OPTION_PREDEFINED=37
    OPTION_CUSTOMIZED=38
    OPTION_VALUE_ITEM=39
    OPTION_VALUE_OBJECT=40
    ENUM_FIELD=41
    MESSAGE_FIELD=42

    tokenNames = [ "<INVALID>", "LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE", 
                   "'public'", "'package'", "'import'", "'option'", "'enum'", 
                   "'message'", "'extend'", "'extensions'", "'to'", "'max'", 
                   "'service'", "'returns'", "'rpc'", "'{'", "'}'", "'('", 
                   "')'", "'['", "']'", "'='", "':'", "','", "';'", "PROTOBUF_SCOPE_LITERAL", 
                   "PROTOBUF_TYPE_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", 
                   "BOOL_LITERAL", "FLOAT_LITERAL", "IDENTIFIER", "QUALIFIED_IDENTIFIER", 
                   "FIELD_IDENTIFIER", "PROTO", "OPTION_PREDEFINED", "OPTION_CUSTOMIZED", 
                   "OPTION_VALUE_ITEM", "OPTION_VALUE_OBJECT", "ENUM_FIELD", 
                   "MESSAGE_FIELD" ]

    RULE_all_identifier = 0
    RULE_all_value = 1
    RULE_literal_value = 2
    RULE_proto_type = 3
    RULE_proto = 4
    RULE_package_def = 5
    RULE_package_name = 6
    RULE_import_def = 7
    RULE_import_file_name = 8
    RULE_option_line_def = 9
    RULE_option_field_def = 10
    RULE_option_field_item = 11
    RULE_option_all_value = 12
    RULE_option_value_object = 13
    RULE_option_value_item = 14
    RULE_option_name = 15
    RULE_enum_def = 16
    RULE_enum_name = 17
    RULE_enum_content = 18
    RULE_enum_item_def = 19
    RULE_message_def = 20
    RULE_message_name = 21
    RULE_message_content = 22
    RULE_message_item_def = 23
    RULE_message_ext_def = 24
    RULE_ext_def = 25
    RULE_ext_name = 26
    RULE_ext_content = 27
    RULE_service_def = 28
    RULE_service_name = 29
    RULE_service_content = 30
    RULE_rpc_def = 31
    RULE_rpc_name = 32
    RULE_req_name = 33
    RULE_resp_name = 34

    ruleNames =  [ "all_identifier", "all_value", "literal_value", "proto_type", 
                   "proto", "package_def", "package_name", "import_def", 
                   "import_file_name", "option_line_def", "option_field_def", 
                   "option_field_item", "option_all_value", "option_value_object", 
                   "option_value_item", "option_name", "enum_def", "enum_name", 
                   "enum_content", "enum_item_def", "message_def", "message_name", 
                   "message_content", "message_item_def", "message_ext_def", 
                   "ext_def", "ext_name", "ext_content", "service_def", 
                   "service_name", "service_content", "rpc_def", "rpc_name", 
                   "req_name", "resp_name" ]

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class All_identifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ProtoParser.IDENTIFIER, 0)

        def QUALIFIED_IDENTIFIER(self):
            return self.getToken(ProtoParser.QUALIFIED_IDENTIFIER, 0)

        def getRuleIndex(self):
            return ProtoParser.RULE_all_identifier

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterAll_identifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitAll_identifier(self)




    def all_identifier(self):

        localctx = ProtoParser.All_identifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_all_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==ProtoParser.IDENTIFIER or _la==ProtoParser.QUALIFIED_IDENTIFIER):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class All_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ProtoParser.IDENTIFIER, 0)

        def literal_value(self):
            return self.getTypedRuleContext(ProtoParser.Literal_valueContext,0)


        def getRuleIndex(self):
            return ProtoParser.RULE_all_value

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterAll_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitAll_value(self)




    def all_value(self):

        localctx = ProtoParser.All_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_all_value)
        try:
            self.state = 74
            token = self._input.LA(1)
            if token in [self.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(self.IDENTIFIER)

            elif token in [self.INTEGER_LITERAL, self.STRING_LITERAL, self.BOOL_LITERAL, self.FLOAT_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73 
                self.literal_value()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Literal_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT_LITERAL(self):
            return self.getToken(ProtoParser.FLOAT_LITERAL, 0)

        def INTEGER_LITERAL(self):
            return self.getToken(ProtoParser.INTEGER_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(ProtoParser.STRING_LITERAL, 0)

        def BOOL_LITERAL(self):
            return self.getToken(ProtoParser.BOOL_LITERAL, 0)

        def getRuleIndex(self):
            return ProtoParser.RULE_literal_value

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterLiteral_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitLiteral_value(self)




    def literal_value(self):

        localctx = ProtoParser.Literal_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.INTEGER_LITERAL) | (1 << self.STRING_LITERAL) | (1 << self.BOOL_LITERAL) | (1 << self.FLOAT_LITERAL))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Proto_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROTOBUF_TYPE_LITERAL(self):
            return self.getToken(ProtoParser.PROTOBUF_TYPE_LITERAL, 0)

        def all_identifier(self):
            return self.getTypedRuleContext(ProtoParser.All_identifierContext,0)


        def getRuleIndex(self):
            return ProtoParser.RULE_proto_type

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterProto_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitProto_type(self)




    def proto_type(self):

        localctx = ProtoParser.Proto_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_proto_type)
        try:
            self.state = 80
            token = self._input.LA(1)
            if token in [self.PROTOBUF_TYPE_LITERAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(self.PROTOBUF_TYPE_LITERAL)

            elif token in [self.IDENTIFIER, self.QUALIFIED_IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79 
                self.all_identifier()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProtoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ProtoParser.EOF, 0)

        def option_line_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Option_line_defContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Option_line_defContext,i)


        def ext_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Ext_defContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Ext_defContext,i)


        def import_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Import_defContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Import_defContext,i)


        def message_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Message_defContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Message_defContext,i)


        def enum_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Enum_defContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Enum_defContext,i)


        def service_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Service_defContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Service_defContext,i)


        def package_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Package_defContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Package_defContext,i)


        def getRuleIndex(self):
            return ProtoParser.RULE_proto

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterProto(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitProto(self)




    def proto(self):

        localctx = ProtoParser.ProtoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_proto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.PACKAGE_LITERAL) | (1 << self.IMPORT_LITERAL) | (1 << self.OPTION_LITERAL) | (1 << self.ENUM_LITERAL) | (1 << self.MESSAGE_LITERAL) | (1 << self.EXTEND_LITERAL) | (1 << self.SERVICE_LITERAL))) != 0):
                self.state = 89
                token = self._input.LA(1)
                if token in [self.PACKAGE_LITERAL]:
                    self.state = 82 
                    self.package_def()

                elif token in [self.IMPORT_LITERAL]:
                    self.state = 83 
                    self.import_def()

                elif token in [self.OPTION_LITERAL]:
                    self.state = 84 
                    self.option_line_def()

                elif token in [self.ENUM_LITERAL]:
                    self.state = 85 
                    self.enum_def()

                elif token in [self.EXTEND_LITERAL]:
                    self.state = 86 
                    self.ext_def()

                elif token in [self.MESSAGE_LITERAL]:
                    self.state = 87 
                    self.message_def()

                elif token in [self.SERVICE_LITERAL]:
                    self.state = 88 
                    self.service_def()

                else:
                    raise NoViableAltException(self)

                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Package_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE_LITERAL(self):
            return self.getToken(ProtoParser.PACKAGE_LITERAL, 0)

        def package_name(self):
            return self.getTypedRuleContext(ProtoParser.Package_nameContext,0)


        def ITEM_TERMINATOR(self):
            return self.getToken(ProtoParser.ITEM_TERMINATOR, 0)

        def getRuleIndex(self):
            return ProtoParser.RULE_package_def

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterPackage_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitPackage_def(self)




    def package_def(self):

        localctx = ProtoParser.Package_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_package_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(self.PACKAGE_LITERAL)
            self.state = 97 
            self.package_name()
            self.state = 98
            self.match(self.ITEM_TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Package_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def all_identifier(self):
            return self.getTypedRuleContext(ProtoParser.All_identifierContext,0)


        def getRuleIndex(self):
            return ProtoParser.RULE_package_name

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterPackage_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitPackage_name(self)




    def package_name(self):

        localctx = ProtoParser.Package_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_package_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100 
            self.all_identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT_PUBLIC(self):
            return self.getToken(ProtoParser.IMPORT_PUBLIC, 0)

        def import_file_name(self):
            return self.getTypedRuleContext(ProtoParser.Import_file_nameContext,0)


        def IMPORT_LITERAL(self):
            return self.getToken(ProtoParser.IMPORT_LITERAL, 0)

        def ITEM_TERMINATOR(self):
            return self.getToken(ProtoParser.ITEM_TERMINATOR, 0)

        def getRuleIndex(self):
            return ProtoParser.RULE_import_def

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterImport_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitImport_def(self)




    def import_def(self):

        localctx = ProtoParser.Import_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_import_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(self.IMPORT_LITERAL)
            self.state = 104
            _la = self._input.LA(1)
            if _la==ProtoParser.IMPORT_PUBLIC:
                self.state = 103
                self.match(self.IMPORT_PUBLIC)


            self.state = 106 
            self.import_file_name()
            self.state = 107
            self.match(self.ITEM_TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_file_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(ProtoParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return ProtoParser.RULE_import_file_name

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterImport_file_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitImport_file_name(self)




    def import_file_name(self):

        localctx = ProtoParser.Import_file_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_import_file_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(self.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Option_line_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def option_all_value(self):
            return self.getTypedRuleContext(ProtoParser.Option_all_valueContext,0)


        def EQUALS(self):
            return self.getToken(ProtoParser.EQUALS, 0)

        def ITEM_TERMINATOR(self):
            return self.getToken(ProtoParser.ITEM_TERMINATOR, 0)

        def option_name(self):
            return self.getTypedRuleContext(ProtoParser.Option_nameContext,0)


        def OPTION_LITERAL(self):
            return self.getToken(ProtoParser.OPTION_LITERAL, 0)

        def getRuleIndex(self):
            return ProtoParser.RULE_option_line_def

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterOption_line_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitOption_line_def(self)




    def option_line_def(self):

        localctx = ProtoParser.Option_line_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_option_line_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(self.OPTION_LITERAL)
            self.state = 112 
            self.option_name()
            self.state = 113
            self.match(self.EQUALS)
            self.state = 114 
            self.option_all_value()
            self.state = 115
            self.match(self.ITEM_TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Option_field_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def option_field_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Option_field_itemContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Option_field_itemContext,i)


        def BRACKET_CLOSE(self):
            return self.getToken(ProtoParser.BRACKET_CLOSE, 0)

        def BRACKET_OPEN(self):
            return self.getToken(ProtoParser.BRACKET_OPEN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ProtoParser.COMMA)
            else:
                return self.getToken(ProtoParser.COMMA, i)

        def getRuleIndex(self):
            return ProtoParser.RULE_option_field_def

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterOption_field_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitOption_field_def(self)




    def option_field_def(self):

        localctx = ProtoParser.Option_field_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_option_field_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(self.BRACKET_OPEN)
            self.state = 118 
            self.option_field_item()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ProtoParser.COMMA:
                self.state = 119
                self.match(self.COMMA)
                self.state = 120 
                self.option_field_item()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(self.BRACKET_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Option_field_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def option_all_value(self):
            return self.getTypedRuleContext(ProtoParser.Option_all_valueContext,0)


        def EQUALS(self):
            return self.getToken(ProtoParser.EQUALS, 0)

        def option_name(self):
            return self.getTypedRuleContext(ProtoParser.Option_nameContext,0)


        def getRuleIndex(self):
            return ProtoParser.RULE_option_field_item

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterOption_field_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitOption_field_item(self)




    def option_field_item(self):

        localctx = ProtoParser.Option_field_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_option_field_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128 
            self.option_name()
            self.state = 129
            self.match(self.EQUALS)
            self.state = 130 
            self.option_all_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Option_all_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def option_value_object(self):
            return self.getTypedRuleContext(ProtoParser.Option_value_objectContext,0)


        def all_value(self):
            return self.getTypedRuleContext(ProtoParser.All_valueContext,0)


        def getRuleIndex(self):
            return ProtoParser.RULE_option_all_value

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterOption_all_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitOption_all_value(self)




    def option_all_value(self):

        localctx = ProtoParser.Option_all_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_option_all_value)
        try:
            self.state = 134
            token = self._input.LA(1)
            if token in [self.INTEGER_LITERAL, self.STRING_LITERAL, self.BOOL_LITERAL, self.FLOAT_LITERAL, self.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132 
                self.all_value()

            elif token in [self.BLOCK_OPEN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133 
                self.option_value_object()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Option_value_objectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK_OPEN(self):
            return self.getToken(ProtoParser.BLOCK_OPEN, 0)

        def BLOCK_CLOSE(self):
            return self.getToken(ProtoParser.BLOCK_CLOSE, 0)

        def option_value_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtoParser.Option_value_itemContext)
            else:
                return self.getTypedRuleContext(ProtoParser.Option_value_itemContext,i)


        def getRuleIndex(self):
            return ProtoParser.RULE_option_value_object

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.enterOption_value_object(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, ProtoParserListener ):
                listener.exitOption_value_object(self)




    def option_value_object(self):

        localctx = ProtoParser.Option_value_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_option_value_object)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(self.BLOCK_OPEN)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ProtoParser.IDENTIFIER:
                self.state = 137 
                self.option_value_item()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
